--- a/雅思英语/生活用品英语单词.md
+++ b/雅思英语/生活用品英语单词.md
@@ -1,44 +1,171 @@
-clothespin [kloʊzˈpɪn]  晾衣夹
-rubber band   [ˈrʌbər] 橡皮筋
-key chain 钥匙链
-phone case 手机壳
-fly swatter [swɑːtə] 苍蝇拍
-trash bag 垃圾袋
-rag 抹布
-ashtray 烟灰缸
-hanger  ['hæŋər]  衣架
-bandaid ['bændeɪd]  创可贴
-lighter 打火机
-matches   火柴
-package   包裹
-bookmark  书签
-duvet cover [ˈduːveɪ]  被套
-sheet  [ʃiːt]  床单
-pillow case 枕套
-sunscreen [ˈsʌnˌskrin]  防晒霜
-toner       爽肤水
-eye cream   眼霜
-lotion      乳液
-hairspray   ['herspreɪ]  发胶
-bobby pin   [ˈbɑbɪpɪn]   发卡、卡子
-hair clip  发夹
-trash can  垃圾箱
-napkin   [ˈnæpkɪn]   餐巾、餐巾纸
-diaper   [ˈdaɪəpər]  尿布
-broom   扫把，扫帚
-mop  [mɑːp]  拖布
-bucket  桶
-rubber gloves  塑胶手套
-dustpan   ['dʌstpæn]  簸箕
-clothesline  ['kləʊðzlaɪn]  晾衣绳
-detergent [dɪ'tɜːrdʒənt] 洗涤剂
-softener   ['sɔːfnər]    柔顺剂
-candle   [ˈkændl]       蜡烛
-lamp      [læmp]        台灯
-slippers  [ˈslɪpəz]     拖鞋
-eye mask  眼罩
-remote    遥控器
 
-
- 
-
+| 单词                   | 音标                       |       英译       |
+| :------------------- | ------------------------ | :------------: |
+| clothespin           | [kloʊzˈpɪn]              |      晾衣夹       |
+| rubber band          | [ˈrʌbər]                 |      橡皮筋       |
+| key chain            |                          |      钥匙链       |
+| phone case           |                          |      手机壳       |
+| fly swatter          | [swɑːtə]                 |      苍蝇拍       |
+| trash bag            |                          |      垃圾袋       |
+| rag                  |                          |       抹布       |
+| ashtray              | <br>[ˈæʃtreɪ/]<br>       |      烟灰缸       |
+| hanger               | ['hæŋər]                 |       衣架       |
+| bandaid              | ['bændeɪd]               |      创可贴       |
+| lighter              |                          |      打火机       |
+| matches              |                          |       火柴       |
+| package              |                          |       包裹       |
+| bookmark             |                          |       书签       |
+| duvet cover          | [ˈduːveɪ]                |       被套       |
+| sheet                | [ʃiːt]                   |       床单       |
+| pillow case          |                          |       枕套       |
+| sunscreen            | [ˈsʌnˌskrin]             |      防晒霜       |
+| toner                |                          |      爽肤水       |
+| eye cream            |                          |       眼霜       |
+| lotion               |                          |       乳液       |
+| hairspray            | ['herspreɪ]              |       发胶       |
+| bobby pin            | [ˈbɑbɪpɪn]               |     发卡，卡子      |
+| hair clip            |                          |       发夹       |
+| trash can            |                          |      垃圾箱       |
+| napkin               | [ˈnæpkɪn]                |     餐巾，餐巾纸     |
+| diaper               | [ˈdaɪəpər]               |       尿布       |
+| broom                |                          |     扫把，扫帚      |
+| mop                  | [mɑːp]                   |       拖布       |
+| bucket               |                          |       桶        |
+| rubber gloves        |                          |      塑胶手套      |
+| dustpan              | ['dʌstpæn]               |       簸箕       |
+| clothesline          | ['kləʊðzlaɪn]            |      晾衣绳       |
+| detergent            | [dɪ'tɜːrdʒənt]           |      洗涤剂       |
+| softener             | ['sɔːfnər]               |      柔顺剂       |
+| candle               | [ˈkændl]                 |       蜡烛       |
+| lamp                 | [læmp]                   |       台灯       |
+| slippers             | [ˈslɪpəz]                |       拖鞋       |
+| eye mask             |                          |       眼罩       |
+| remote               |                          |      遥控器       |
+| pajamas              | [pəˈdʒæməz]              |       睡衣       |
+| receipt              | [rɪˈsiːt]                |     发票，收据      |
+| paper towel          |                          |      厚纸巾       |
+| nail                 |                          |       钉子       |
+| screwdriver          | [ˈskruːdraɪvər]          |      螺丝刀       |
+| hammer               | [ˈhæmər]                 |       锤子       |
+| wrench               | [rentʃ]                  |       扳手       |
+| eyedrops             | [ˈaɪˌdrɑːps]             |      眼药水       |
+| aspirin              | [ˈæsprɪn]                |      阿司匹林      |
+| thermometer          | [θərˈmɑːmɪtər]           |      温度计       |
+| bathtub              | ['bæθtʌb]                |     浴缸，澡盆      |
+| toilet               | ['tɔɪlət]                |       马桶       |
+| plunger              | ['plʌndʒər]              |      马桶塞       |
+| shower               | ['ʃaʊər]                 |       沐浴       |
+| shower head          | ['ʃaʊər]                 |      花洒头       |
+| mirror               | ['mɪrər]                 |       镜子       |
+| mouthwash            | [ˈmaʊθˌwɒʃ]              |      漱口水       |
+| shower cap           |                          |       浴帽       |
+| shampoo              | [ʃæm'pu]                 |      洗发水       |
+| conditioner          | [kən'dɪʃənər]            |    护发素，护肤乳     |
+| body wash            | ['badi waʃ]              |      沐浴露       |
+| hand soap            |                          |      洗手液       |
+| toner                | ['toʊnər]                |      爽肤水       |
+| moisturizer          | [ˈmɔɪstʃəˌraɪzə]         |      保湿霜       |
+| lotion               | [ˈləʊʃən]                |       乳液       |
+| liquid soap          | [liˈkwɪd sɔːp]           |      液体皂       |
+| sink                 | [sɪŋk]                   |     水槽，洗脸池     |
+| drain                | [dreɪn]                  |      下水道       |
+| the drain is clogged | v.ed  clag [klæɡ] 像泥一样粘住 |     下水管堵了      |
+| shower curtain       | ['ʃaʊər 'kɜːrtn]         |       浴帘       |
+| shower curtain rod   | [rɑːd]                   |      浴帘杆       |
+| razor                | ['reɪzər]                |      剃须刀       |
+| electric razor       |                          |     电动剃须刀      |
+| shaving cream        | [ˈʃevɪŋ]                 |      剃须膏       |
+| tile                 | [taɪl]                   |       瓷砖       |
+| bath mat             | [bæθmæt]                 |       浴垫       |
+| laundry basket       | [lɔːndrɪ'bæskɪt]         |      洗衣篮       |
+| hamper               |                          |      洗衣筐       |
+| cup                  |                          |       杯子       |
+| toothpaste           | [tuːθpeɪst]              |       牙膏       |
+| toothbrush           | [ˈtuːθbrʌʃ]              |       牙刷       |
+| floss                | [flɔs]                   |       牙线       |
+| towel rack           |                          |      毛巾架       |
+| soap dish            | [dɪʃ]                    |      肥皂盒       |
+| wash cloth           | [klɒθ]                   |      洗脸巾       |
+| bath towlel          |                          |       浴巾       |
+| hand towel           |                          |       手巾       |
+| fuacet               | ['fɔːsɪt]                |      水龙头       |
+| handle               | [hændl]                  |       把手       |
+| toilet paper         |                          |      卫生纸       |
+| tissues              | [ˈtɪʃuːz]                |       纸巾       |
+| toilet paper holder  |                          |      厕纸架       |
+| toilet brush         |                          |      马桶刷       |
+| trash can            | [træʃ kæn]               |      垃圾桶       |
+| waste basket         |                          |      废纸篓       |
+| toilet tank          |                          |     (马桶)水箱     |
+| flush the toilet     |                          |      冲厕所       |
+| outlet               | ['aʊtlet]                |      墙壁插座      |
+| light switch         |                          |     （电灯）开关     |
+| air freshener        | [eə®ˈfreʃənə]            |     空气清新剂      |
+| sponge               | [spʌndʒ]                 |       海绵       |
+| medicine cabinet     | ['kæbɪnət]               |     药柜，药箱      |
+| Q-tips               |                          |       棉签       |
+| cotton balls         | ['kɑːtn]                 |      棉花球       |
+| hook                 |                          |       钩子       |
+| comb                 |                          |       梳子       |
+| deodorant            | [dɪ ˈəʊdərənt]           |      除臭剂       |
+| nail clippers        | ['klɪpərz]               |      指甲刀       |
+| tweezers             | ['twiːzəz]               |       镊子       |
+| laptop               |                          |     笔记本电脑      |
+| tablet               | [ˈtæblət]                |      平板电脑      |
+| charger              | [ˈtʃɑːrdʒər]             |      充电器       |
+| cord                 |                          |       电线       |
+| power strip          | [strɪp]                  |   插线板（电源+插座）   |
+| plug                 | [plʌɡ]                   |       插头       |
+| microphone           | [ˈmaɪkrəfoʊn]            |      麦克风       |
+| toaster              | [ˈtoʊstər]               |      面包机       |
+| fridge               | [frɪdʒ]                  | （整体一般叫做）冰箱（冷藏） |
+| freezer              | [ˈfriːzər]               |     冰柜（冷冻）     |
+| vacuum               | [ˈvækjuːm]               |      吸尘器       |
+| fan                  | [fæn]                    |      电风扇       |
+| iron                 | [ˈaɪərn]                 |       熨斗       |
+| blender              | [ˈblendər]               |      搅拌机       |
+| microwave            |                          |      微波炉       |
+| washing machine      | [məˈʃiːn]                |      洗衣机       |
+| washer               |                          |    洗衣机（口语）     |
+| dishwasher           | [ˈdɪʃwɔːʃər]             |      洗碗机       |
+| television(TV)       | [ˈtelɪvɪʒ(ə)n]           |      电视机       |
+| kettle               | [ˈket(ə)l]               |       水壶       |
+| alarm clock          | [əˈlɑːm klɒk]            |       闹钟       |
+| hairdryer            | ['herdraɪər]             |    电吹风，吹风机     |
+| hair dryer           | 美式喜欢合写，英式喜欢分写            |    电吹风，吹风机     |
+| straighteners        | [ˈstreɪtnərz]            |      直发器       |
+| electric shaver      |                          |     电动剃须刀      |
+| DVD player           |                          |     DVD播放机     |
+| lawnmower            | [ˈlɔːnmoʊər]             |      割草机       |
+| computer             | [kəmˈpjuːtər]            |     电脑（泛指）     |
+| steamer              |                          |       蒸锅       |
+| speaker              | [ˈspiːkər]               |      扬声器       |
+| meat grinder         | [ˈɡraɪndər]              |      绞肉机       |
+| telephone            |                          |  （正式书信/文档）电话   |
+| phone                |                          | （日常交流、聊天）phone |
+| headphones           |                          |     头戴式耳机      |
+| earphones            |                          |     入耳式耳机      |
+| earbuds              | [ˈirbʌdz]                |     半入耳式耳机     |
+| electric toothbrush  |                          |      电动牙刷      |
+| food processor       |                          |     食品加工器      |
+| coffee machine       |                          |      咖啡机       |
+| electric blanket     | [ˈblæŋkɪt]               |      电热毯       |
+| router               |                          |      路由器       |
+| treadmill            | [ˈtredmɪl]               |      跑步机       |
+| photocopier          | [ˈfoʊtoʊkɑːpiər]         |      复印机       |
+| camera               |                          |       相机       |
+| flashlight           |                          |     手电筒(美)     |
+| torch                | [tɔːtʃ]<br>              |     手电筒(英)     |
+| light bulb           | [bʌlb]                   |      电灯泡       |
+| calculator           | ˈkælkjuleɪtər            |      计算器       |
+| stove                | [stoʊv]                  |       火炉       |
+| oven                 | [ˈʌv(ə)n]                |       烤箱       |
+| air conditioner      | [ˈeə kəndɪʃənə(r)]       |     空调/冷气      |
+| heater               |                          |       暖气       |
+| water heater         |                          |      热水器       |
+| printer              | [ˈprɪntər]               |      打印机       |
+| hard drive           |                          |       硬盘       |
+| mouse pad            |                          |      鼠标垫子      |
+| keyboard             | [ˈkiːbɔːrd]              |       键盘       |
+| screen               | [skriːn]                 |       屏幕       |
+| foot spa             |                          |     足疗仪，足浴     |
