--- a/雅思英语/生活作息英语单词.md
+++ b/雅思英语/生活作息英语单词.md
@@ -4,7 +4,7 @@
 | wake up             |              | 醒来            |
 | get up              |              | 起床            |
 | wash my face        |              | 洗脸            |
-| go to the bathroom  |              | 上厕所           |
+| go to the bathroom  | [ˈbæθruːm]   | 上厕所           |
 | dry my face         |              | 擦干脸           |
 | brush my teeth      |              | 刷牙            |
 | take a shower       |              | 洗澡            |
