--- a/雅思英语/蔬菜英语单词.md
+++ b/雅思英语/蔬菜英语单词.md
@@ -1,3 +1,60 @@
-| 单词  | 音标  | 英译  |
-| --- | --- | --- |
-|     |     |     |
+| 单词              | 音标               | 英译      |
+| --------------- | ---------------- | ------- |
+| cabbage         |                  | 卷心菜     |
+| Chinese cabbage |                  | 大白菜     |
+| carrot          |                  | 胡萝卜     |
+| radish          | [ˈrædɪʃ]         | (小)萝卜   |
+| cauliflower     | [ˈkɑːliflaʊər]   | 花菜/菜花   |
+| onion           | [ˈʌnjən]         | 洋葱      |
+| cucumber        | [ˈkjuːkʌmbər]    | 黄瓜      |
+| broccoli        | [ˈbrɑːkəli]      | 花椰菜     |
+| potato          | [pəˈteɪtoʊ]      | 土豆      |
+| brussels sprout | [brʌslz ˈspraʊt] | 球芽甘蓝    |
+| spinach         | [ˈspɪnɪtʃ]       | 菠菜      |
+| mushroom        |                  | 蘑菇      |
+| green onion     |                  | 大葱      |
+| chive           | [tʃaɪv]          | 香葱      |
+| Chinese chive   |                  | 韭菜      |
+| lettuce         | [ˈletɪs]         | 生菜      |
+| asparagus       | [əˈspærəɡəs]     | 芦笋      |
+| green bean      | [biːn]           | 青豆/四季豆  |
+| bean sprout     | [spraʊt]         | 豆芽      |
+| artichoke       | [ˈɑːrtɪtʃoʊk]    | 洋蓟,朝鲜蓟  |
+| beet            |                  | 甜菜      |
+| eggplant        |                  | 茄子      |
+| shallot         | [ʃəˈlɑːt]        | 红葱      |
+| arugula         | [əˈruːɡələ]      | 芝麻菜     |
+| celery          |                  | 芹菜      |
+| corn            | [kɔːrn]          | 玉米      |
+| bell peper      |                  | 灯笼椒     |
+| chili           | [ˈtʃɪli]         | 辣椒      |
+| green chili     |                  | 青辣椒     |
+| kidney bean     | [ˈkɪdni]         | 菜豆/芸豆   |
+| sweet potato    |                  | 地瓜/甘薯   |
+| lima bean       | [ˈliːmə]         | 利马豆     |
+| scallion        | [ˈskæliən]       | 大头葱     |
+| tofu skin       |                  | 豆腐皮     |
+| bitter melon    | [ˈbɪtər]         | 苦瓜      |
+| cilantro        | [sɪˈlɑːntroʊ]    | 香菜      |
+| yam             | [jæm]            | 山药      |
+| truffle         | [ˈtrʌfl]         | 松露      |
+| lotus root      | [ˈloʊtəs]        | 莲藕      |
+| leek            |                  | 韭葱（超大葱） |
+| tomato          |                  | 番茄      |
+| garlic          |                  | 大蒜      |
+| ginger          | [ˈdʒɪndʒər]      | 生姜      |
+| kale            | [keɪl]           | 羽衣甘蓝    |
+| watercress      | [kres]           | 西洋菜/水田芥 |
+| water spinach   |                  | 空心菜     |
+| winter melon    |                  | 冬瓜      |
+| black bean      |                  | 黑豆      |
+| pea             |                  | 豌豆      |
+| chickpea        |                  | 鹰嘴豆     |
+| squash          | [skwɑːʃ]         | 南瓜（类）   |
+| pumpkin         | [ˈpʌmpkɪn]       | 南瓜      |
+| zucchini        | [zuˈkiːni]       | 西葫芦     |
+| laver           | [ˈlɑːvər]        | 紫菜      |
+| shitake         | [ʃɪˈtɑːki]       | 香菇      |
+| kelp/seaweed    |                  | 海带/海藻   |
+| enoki mushroom  | [ɪˈnəʊkɪ]        | 金针菇     |
+|                 |                  |         |
