--- a/雅思英语/聊天常用英语短语.md
+++ b/雅思英语/聊天常用英语短语.md
@@ -1,9 +1,37 @@
 
-| 单词        | 音标  | 英译    | 例句                                             |
-| --------- | --- | ----- | ---------------------------------------------- |
-| feel like |     | 感觉    | I feel like I'm not normal 我感觉我不正常             |
-| hit up    |     | 联系    | Hit me up later. 晚点联系我                         |
-| laid back |     | 悠闲/自在 | He‘s pretty laid back 他很悠闲                     |
-| ask over  |     | 请...来 | Why don‘t you ask over your brother? 不如请你哥哥过来？ |
-| too bad   |     | 可惜    | Too bad you can't come to the party. 可惜你不能来聚会  |
-|           |     |       |                                                |
+| 单词           | 音标  | 英译       | 例句                                                     |
+| ------------ | --- | -------- | ------------------------------------------------------ |
+| feel like    |     | 感觉       | I feel like I'm not normal 我感觉我不正常                     |
+| hit up       |     | 联系       | Hit me up later. 晚点联系我                                 |
+| laid back    |     | 悠闲/自在    | He‘s pretty laid back 他很悠闲                             |
+| ask over     |     | 请...来    | Why don‘t you ask over your brother? 不如请你哥哥过来？         |
+| too bad      |     | 可惜       | Too bad you can't come to the party. 可惜你不能来聚会          |
+| up for       |     | 想（做）/愿意  | I‘m not up for chatting. 我不太想聊天                        |
+| drop by      |     | 串门/顺便拜访  | I'll drop by this weekend. 周末我去看你                      |
+| sort of      |     | 有点       | It's sort of a funny story. 这算是一个有趣的故事                 |
+| meet up      |     | 碰头       | Let's meet up about 7.我们七点左右碰面吧                        |
+| ask out      |     | 约出去      | Could I ask you out for dinner? 我可以约你出去吃饭吗？            |
+| up to        |     | 在忙/在做    | What've you been up to? 你最近在忙什么？                       |
+| go out       |     | 出去玩      | I need to go out more. 我需要多出去走走                        |
+| on me        |     | 我请客      | Dinner's on me. 晚饭我请客                                  |
+| go for       |     | 选择/喜欢    | I typically go for spicy food. 我通常会吃辣的食物               |
+| let me get a |     | 我要一份     | Let me get a hot dog ,extra chili. 我要一份热狗,多放辣          |
+| come to      |     | 一共       | What does that come to? 一共多少钱？                         |
+| got it       |     | 付钱       | I've got it. 我来付                                       |
+| down for     |     | 可以/同意    | I'm down for whatever. 我什么都可以                          |
+| get it       |     | 理解       | I don't really get it. 我真不明白                           |
+| chillin      |     | 放松       | I‘m just chillin. 我在放松                                 |
+| run into     |     | 碰到       | I ran into a friend today. 我遇到一个朋友                     |
+| show around  |     | 带...参观   | Let me show you around. 让我带你转转                         |
+| put off      |     | 推迟       | We can put off this meeting for tomorrow. 我们可以把开会推迟到明天 |
+| screw up     |     | 犯错/搞砸    | I really screwed up at work today. 我今天上班真的搞砸了          |
+| chill out    |     | 冷静       | What‘s your problem?Chill out. 你怎么回事？冷静点               |
+| catch up     |     | 叙旧       | Let's catch up today. 让我们今天见面聊聊                        |
+| take up      |     | 占(时间，地方) | Sorry to take up your time. 抱歉占用你的时间                   |
+| make up      |     | 补偿       | You'll make it up to me. 你得补偿我                         |
+| and stuff    |     | 之类的      | We'll talk about movies and stuff. 我们会聊聊电影之类的          |
+| you bet      |     | 不客气      | You bet！Happy to help.不客气，很乐意帮助你                       |
+| put up woth  |     | 忍受       | I would‘t put up with taht. 这我忍不了                      |
+| mix up       |     | 搞混       | I always mix them up. 我总是认错她们                          |
+| keep on      |     | 继续       | Keep on practicing, you'll get better.继续练习，你会变得更好      |
+
